--- a/docs/zh/functions.mdx
+++ b/docs/zh/functions.mdx
@@ -4,6 +4,10 @@ weight: 55
 
 # 计量计费
 
+:::warning
+计量计费仅是 `Alpha` 功能，你需要通过开启功能开关 `ait-billing` 以启用此功能。
+:::
+
 ## 费用统计
 
 费用统计功能支持您以各类维度统计平台中的资源费用，支持的维度如下：
@@ -21,7 +25,7 @@ weight: 55
     
     * 平台仅支持查询跨度最多为一年的周期内数据。
     
-    * 费用列所使用的货币单位由 **计量计费服务端** 的插件配置决定。
+    * 费用列所使用的货币单位由 **Cost Management Server** 的插件配置决定。
 
 ## 费用明细 
 
@@ -36,6 +40,6 @@ weight: 55
     
     * 平台仅支持查询跨度最多为一年的周期内数据。
     
-    * 费用列所使用的货币单位由 **计量计费服务端** 的插件配置决定。
+    * 费用列所使用的货币单位由 **Cost Management Server** 的插件配置决定。
 
     * 未挂载至 POD 的 PV，将被统计为 unmounted 的记录，使用对象名称为 `*unmounted-pvcs`。
