--- a/docs/zh/intro.mdx
+++ b/docs/zh/intro.mdx
@@ -29,7 +29,7 @@ weight: 10
 - **依赖 Prometheus**：计量数据基于 Prometheus 获取，安装前请确保需要计量的集群已经部署了 Monitor with Prometheus 插件。
 - **资源类型限制**：目前仅支持 CPU、内存和存储资源的计量计费，其他资源类型暂不支持。
 - **集群兼容性**：功能可能不兼容所有类型的 Kubernetes 集群，需在支持的集群环境中使用。
-- **数据延迟**：计量数据可能存在一定的延迟，实时性可能受到影响。
+- **数据延迟**：由于数据采集链路存在延时性，计量数据可能存在一定的延迟。
 
 基于此功能，我们希望能够帮助用户更好地管理和优化其容器平台的资源使用，实现更高效的成本控制。
 
