--- a/docs/en/installation.mdx
+++ b/docs/en/installation.mdx
@@ -3,27 +3,27 @@ weight: 50
 sourceSHA: a5eb828cb2c78fa71828524f15c995074069156dab594f768fb09206779dc686
 ---
 
-# Deployment
+# Installation
 
-This article will introduce how to deploy the components required for metering and billing.
+This article will introduce how to install the components required for metering and billing.
 
-## Predeployment Considerations
+## Preinstall Considerations
 
 - The **Cost Management Server** and **Cost Management Agent** work together to provide the overall metering and billing functionality of the platform. The server-side component supports data storage capabilities related to metering and billing, while the client-side component handles data collection and billing capabilities.
 
-- The **Cost Management Server** component relies on ClickHouse as its data storage solution. You can either deploy the Log Store with Clickhouse plugin provided by the platform or deploy ClickHouse on your own for integration.
+- The **Cost Management Server** component relies on ClickHouse as its data storage solution. You can either install the Log Store with Clickhouse plugin provided by the platform or deploy ClickHouse on your own for integration.
 
-- The **Cost Management Agent** component requires that the corresponding cluster has the **Monitor with Prometheus** monitoring component deployed. Please ensure that this component is successfully deployed in advance.
+- The **Cost Management Agent** component requires that the corresponding cluster has the **Monitor with Prometheus** monitoring component installed. Please ensure that this component is successfully deployed in advance.
 
-## Deploying the Cost Management Server Plugin
+## Install the Cost Management Server Plugin
 
 ### Prerequisites
 
-The **Cost Management Server** component relies on ClickHouse as its data storage solution. You can either deploy the Log Store with Clickhouse plugin provided by the platform or deploy ClickHouse on your own for integration.
+The **Cost Management Server** component relies on ClickHouse as its data storage solution. You can either install the Log Store with Clickhouse plugin provided by the platform or deploy ClickHouse on your own for integration.
 
 ### Steps
 
-1. Log in to the cluster where the Log Store with Clickhouse plugin is deployed and obtain ClickHouse integration information:
+1. Log in to the cluster where the Log Store with Clickhouse plugin is installed and obtain ClickHouse integration information:
 
 ```bash
 # Obtain Clickhouse connection address
@@ -54,11 +54,11 @@ kubectl get secret -n cpaas-system clickhouse-basic-auth -o jsonpath={.data.pass
 
 6. Click **Deploy**.
 
-## Deploying the Cost Management Agent Plugin
+## Install the Cost Management Agent Plugin
 
 ### Prerequisites
 
-- The **Cost Management Agent** component requires that the corresponding cluster has the **Monitor with Prometheus** monitoring component deployed. Please ensure that this component is successfully deployed in advance.
+- The **Cost Management Agent** component requires that the corresponding cluster has the **Monitor with Prometheus** monitoring component installed. Please ensure that this component is successfully deployed in advance.
 
 ### Steps
 
