--- a/docs/zh/intro.mdx
+++ b/docs/zh/intro.mdx
@@ -26,7 +26,7 @@ weight: 10
 - **成本优化**：通过详细的资源使用数据，识别和优化高成本资源，降低总体运营成本。
 
 ## 使用限制
-- **依赖 Prometheus**：计量数据基于 Prometheus 获取，安装前请确保需要计量的集群已经部署了 Monitor with Prometheus 插件。
+- **依赖 Prometheus**：计量数据基于 Prometheus 获取，安装前请确保需要计量的集群已经安装了 ACP Monitor with Prometheus 插件。
 - **资源类型限制**：目前仅支持 CPU、内存和存储资源的计量计费，其他资源类型暂不支持。
 - **集群兼容性**：功能可能不兼容所有类型的 Kubernetes 集群，需在支持的集群环境中使用。
 - **数据延迟**：由于数据采集链路存在延时性，计量数据可能存在一定的延迟。
