--- a/docs/en/release_notes.mdx
+++ b/docs/en/release_notes.mdx
@@ -3,46 +3,16 @@ weight: 12
 i18n:
   title:
     en: Release Notes
-sourceSHA: f6bb4ee0da92c785711c9b3609211b2ef573c84a6f24a9446a4f8836af1ce843
-title: Release Notes
 ---
-
-:::tip
-
-You can visit the [Release Notes Example](https://product-doc-guide.alauda.cn/template/release_notes/example.html) to view examples of the corresponding documentation.
-
-:::
 
 # Release Notes
 
-## \<Minor Version: For example 2.0.0 >
+## 4.0.0
 
-### New and Optimized Features
+### Features and Enhancements
 
-#### \<Feature Name>
-
-A brief introduction to the new or optimized feature.
-
-### Deprecated Features
-
-#### \<Feature Name>
-
-A brief introduction to the deprecated feature, suggesting reasons for deprecation and alternative solutions.
-
-### Upcoming Deprecated Features
-
-#### \<Feature Name>
-
-A brief introduction to the upcoming deprecated feature, suggesting reasons for deprecation and alternative solutions.
-
-### Issues Fixed
-
-The list of fixed issues can be automatically generated based on JIRA issues using the `release-notes-for-bugs` component provided by the documentation framework.
-
-Refer to the [Guide to Automatically Generate Release Issue Lists](https://product-doc-guide.alauda.cn/guide/auto_gen_releasenotes.html) for usage.
+None
 
 ### Known Issues
 
-Similar to the fixed issues, this can also be automatically generated based on JIRA issues using the `release-notes-for-bugs` component provided by the documentation framework.
-
-Refer to the [Guide to Automatically Generate Release Issue Lists](https://product-doc-guide.alauda.cn/guide/auto_gen_releasenotes.html) for usage.
+{/* release-notes-for-bugs?template=unfixed*/}
