--- a/docs/en/cost_management/architecture.mdx
+++ b/docs/en/cost_management/architecture.mdx
@@ -5,7 +5,7 @@ sourceSHA: 65711656e6ba29eeb185fcffd2f18cf12055a3459fd48453eb855133ba7d768d
 
 # Architecture
 
-![](../zh/assets/billing_flow.png)
+![](../../en/assets/billing_flow.png)
 
 The platform provides overall metering and billing capabilities through the cooperation of **ACP Cost Management Server** and **ACP Cost Management Agent** components:
 
