--- a/docs/en/operation_statistics/function_meter.mdx
+++ b/docs/en/operation_statistics/function_meter.mdx
@@ -6,7 +6,9 @@ sourceSHA: 1b9445d4288a0d2f3d00d8197e8bc67fa7eae9ec1f24fb5ec3d1f7d15d10e795
 # Operation Statistics
 
 :::warning
-Operation statistics is a measurement feature provided by the platform, which will be replaced by new metering and billing functionality in the future. Please use this feature cautiously.
+Operation statistics is a legacy measurement feature provided by the platform. This functionality has been replaced by the new **Metering and Billing** features, which include cost model management, multiple billing methods, and project-level billing capabilities. 
+
+For new deployments, please use the **Metering and Billing** functionality instead. Existing users should plan to migrate to the new billing system.
 :::
 
 ## Operation Overview
