--- a/docs/en/cost_management/intro.mdx
+++ b/docs/en/cost_management/intro.mdx
@@ -21,7 +21,7 @@ Key features include:
 
 ## Usage Limitations
 
-- **Dependency on Prometheus**: Metering data is obtained based on Prometheus; please ensure that the clusters requiring metering have installed the ACP Monitor with Prometheus plugin before installation.
+- **Dependency on Prometheus**: Metering data is obtained based on Prometheus; please ensure that the clusters requiring metering have installed the Alauda Container Platform Monitor with Prometheus plugin before installation.
 - **Resource Type Limitations**: Currently, only CPU, memory, and storage resource metering and billing are supported; other resource types are not supported at this time.
 - **Cluster Compatibility**: Features may not be compatible with all types of Kubernetes clusters and should be used in supported cluster environments.
 - **Data Latency**: Due to the latency of the data collection link, there may be some delay in the measurement data.
