--- a/docs/en/cost_management/fuctions/project_billing.mdx
+++ b/docs/en/cost_management/fuctions/project_billing.mdx
@@ -1,39 +1,29 @@
 ---
-weight: 58
+weight: 40
 ---
 
 # Project-Level Billing
 
-Project-level billing functionality provides cost visibility and management capabilities at the project level, allowing project administrators and developers to view costs for their own projects and namespaces.
+Project-level billing provides cost visibility at the project level for project administrators and developers.
 
 ## Overview
 
-Project-level billing is available under the project management interface, providing a dedicated metering and billing section for project-specific cost analysis. This feature supports role-based access control, ensuring users can only view billing data for projects and namespaces they have permissions for.
+Project-level billing is available under the project management interface with role-based access control, ensuring users can only view billing data for projects and namespaces they have permissions for.
 
-## Access and Permissions
-
-### Navigation
+## Navigation
 
 To access project-level billing:
-1. Navigate to the project management interface
-2. Locate the **Metering and Billing** section below **DevOps Tools** and above **Notifications**
-3. The section contains two sub-pages: **Cost Statistics** and **Cost Details**
+1. Navigate to the **Projects** interface
+2. Locate **Metering and Billing** 
+3. Contains two sub-pages: **Cost Statistics** and **Cost Details**
 
 :::info
-The Metering and Billing menu in project management is controlled by the metering and billing feature toggle.
+The Metering and Billing menu is controlled by the feature gate `ait-billing`.
 :::
-
-### Permission Requirements
-
-| Role | Permission | Access Scope |
-|------|------------|--------------|
-| Project Administrator | View all data | All data within the project |
-| Namespace Administrator | View limited data | Only namespaces + clusters with permissions |
-| Developer | View limited data | Only namespaces + clusters with permissions |
 
 ## Cost Statistics
 
-Project-level cost statistics provide summarized cost information for projects and namespaces you have access to.
+Provides summarized cost information for projects and namespaces you have access to.
 
 ### Features
 
@@ -42,144 +32,57 @@ Project-level cost statistics provide summarized cost information for projects a
 - Support for time range selection, statistical granularity, and billing item filtering
 - Usage statistics alongside cost information
 
-### Data Filtering Rules
-
-**Project-level roles (Project Administrator):**
-- Can view all data within the current project
-- Access to all namespaces and clusters associated with the project
-
-**Namespace-level roles (Namespace Administrator, Developer):**
-- Can only view data for namespaces + cluster combinations they have permissions for
-- Restricted to authorized resources only
-
 ### Usage
 
-1. In the project management interface, click **Metering and Billing** > **Cost Statistics**
+#### Cost Statistics
 
-2. Configure your search criteria:
-   - **Time Range**: Select the period for cost analysis
-   - **Statistical Granularity**: Choose between project, namespace, or cluster views
-   - **Billing Items**: Specify whether to display costs separately by item type
-   - **Reporting Interval**: Select monthly, weekly, or daily intervals
+1. Click **Metering and Billing** > **Cost Statistics**
+2. Configure search criteria:
+   - **Aggregation By**: Choose project, namespace, or cluster views
+   - **Separate Items**: Display costs separately by item type
+   - **Interval**: Select monthly, weekly, or daily intervals
+   - **Select Time**: Select the period for cost analysis
+3. Click **Search** to view cost statistics
 
-3. Click **Search** to view the cost statistics
+#### Usage Statistics
+
+1. Click **Metering and Billing** > **Cost Statistics**
+2. Switch to **Usages** tab
+3. Configure search criteria:
+   - **Aggregation By**: Choose project, namespace, or cluster views
+   - **Interval**: Select monthly, weekly, or daily intervals
+   - **Billing Item**: Filter by resource types
+   - **Method**: Filter by measurement method
+   - **Select Time**: Select the period for usage analysis
+4. Click **Search** to view usage statistics
 
 :::warning
-Only the cost information of all clusters associated with the cost model is counted. If the billing data of a cluster is not queried, please contact the platform administrator to configure the cost model.
+Only clusters associated with cost models are counted. Contact the platform administrator to configure cost models if cluster billing data is missing.
 :::
 
 ## Cost Details
 
-Project-level cost details allow you to query detailed billing records within your project scope.
+Query detailed billing records within your project scope.
 
 ### Features
 
 - Same display fields as platform-level cost details
-- Project filtering is hidden (automatically set to current project)
-- Cluster and namespace filters are restricted based on permissions
+- Project filtering hidden (automatically set to current project)
+- Cluster and namespace filters restricted based on permissions
 - Support for search, column customization, and data export
-
-### Filtering Restrictions
-
-**Project Filter**: 
-- Hidden from the interface
-- Automatically restricted to the current project
-
-**Cluster Filter**:
-- Shows "All" and clusters associated with the current project
-- For namespace-level roles: Only clusters with namespace permissions are available
-
-**Namespace Filter**:
-- Shows "All" and namespaces within the current project  
-- For namespace-level roles: Only authorized namespaces are available
-
-### Data Access Rules
-
-**Project-level roles:**
-- View all billing data within the project
-- Access to all project namespaces and associated clusters
-
-**Namespace-level roles:**
-- View billing data only for authorized namespace + cluster combinations
-- Restricted access based on individual permissions
 
 ### Usage
 
-1. In the project management interface, click **Metering and Billing** > **Cost Details**
-
-2. Configure your search criteria:
-   - **Time Range**: Select the billing period to query (maximum 1 year)
-   - **Cluster**: Choose from available clusters (based on permissions)
+1. Click **Metering and Billing** > **Cost Details**
+2. Configure search criteria:
+   - **Select Time**: Select billing period (maximum 1 year)
+   - **Cluster**: Choose from available clusters
    - **Namespace**: Select from authorized namespaces
-   - **Billing Item**: Filter by specific resource types
-   - **Billing Method**: Filter by measurement method
-
+   - **Billing Item**: Filter by resource types
+   - **Method**: Filter by measurement method
 3. Use additional features:
    - **Search by Name**: Find specific resources
    - **Column Settings**: Customize displayed fields
-   - **Export**: Download data in CSV format
-   - **Hide Zero Costs**: Toggle to exclude zero-cost records
-
-4. Click **Search** to view the detailed billing records
-
-## Common Scenarios
-
-### Scenario 1: Project Cost Review
-**User**: Project Administrator  
-**Goal**: Review monthly costs for the entire project
-
-1. Access **Cost Statistics** in project management
-2. Set time range to "Current Month"
-3. Select "Project" as statistical granularity  
-4. Choose "Monthly" reporting interval
-5. Enable "Distinguish Billing Items" to see breakdown by CPU, Memory, Storage
-
-### Scenario 2: Namespace-Specific Analysis
-**User**: Namespace Administrator  
-**Goal**: Analyze detailed costs for specific namespaces
-
-1. Access **Cost Details** in project management
-2. Set appropriate time range
-3. Select specific cluster and namespace from available options
-4. Filter by billing item if needed
-5. Export results for further analysis
-
-### Scenario 3: Resource Optimization
-**User**: Developer  
-**Goal**: Identify high-cost resources in authorized namespaces
-
-1. Use **Cost Details** to view resource-level billing
-2. Sort by cost amount to identify expensive resources
-3. Filter by resource type to focus on specific areas
-4. Use search functionality to find specific workloads
-
-## Troubleshooting
-
-### No Data Available
-If you don't see any billing data:
-
-1. **Check Permissions**: Verify you have access to the project/namespaces
-2. **Cost Model Association**: Ensure clusters are associated with cost models
-3. **Time Range**: Confirm the selected time range contains billing periods
-4. **Component Installation**: Verify metering/billing components are installed
-
-### Limited Data Visibility
-If you see less data than expected:
-
-1. **Role Verification**: Confirm your role and associated permissions
-2. **Namespace Access**: Check which namespaces you have access to
-3. **Cluster Associations**: Verify which clusters are linked to your authorized namespaces
-
-### Contact Support
-For billing data issues beyond your access scope:
-- Contact your platform administrator to configure cost models
-- Request additional permissions if needed
-- Report data inconsistencies to the platform team
-
-## Best Practices
-
-1. **Regular Monitoring**: Review costs regularly to identify trends and anomalies
-2. **Resource Tagging**: Use labels consistently for better cost attribution
-3. **Budget Planning**: Use historical data to plan future resource allocation
-4. **Team Communication**: Share cost insights with development teams
-5. **Optimization Actions**: Act on cost analysis findings to optimize resource usage 
+   - **Export**: Download CSV format data
+   - **HHide Zero-Cost Items**: Exclude zero-cost records
+4. Click **Search** to view detailed billing records
