--- a/docs/en/cost_management/fuctions/cost_model_management.mdx
+++ b/docs/en/cost_management/fuctions/cost_model_management.mdx
@@ -148,6 +148,7 @@ The price by label feature allows you to set different prices for different labe
 
 - The labels we currently support are obtained from Prometheus, and the specific metrics are: `kube_pod_labels`.
 - The product currently defaults to collecting these labels from the pod into the kube_pod_labels metric: `app`,`mon`,`osd`,`mds`,`mgr`,`rgw`,`service_name`,`middleware.instance/name`,`middleware.instance/type`.
+- The project quota billing method currently does not support using Price By Label. If you need it, you can contact our technical personnel.
 
 ### Adding Custom Labels
 
