--- a/docs/en/cost_management/howto/gpu/pgpu_cost_model.mdx
+++ b/docs/en/cost_management/howto/gpu/pgpu_cost_model.mdx
@@ -171,7 +171,7 @@ Then you can add price for the cost model of the GPU cluster:
 4. Config **Price By Label** (optional).
   Example:
     **key**: modelName
-    **value**: "Tesla P100-PCIE-16GB" or "Tesla T4" or "NVIDIA A30"(You can get it by run `nvidia-smi`)
+    **value**: "Tesla P100-PCIE-16GB" or "Tesla T4" or "NVIDIA A30"(Got it by run `nvidia-smi`)
 
 
 ### Cost Details and Cost Statistics
