--- a/docs/en/cost_management/howto/gpu/vgpu_cost_model.mdx
+++ b/docs/en/cost_management/howto/gpu/vgpu_cost_model.mdx
@@ -288,7 +288,7 @@ Then you can add price for the cost model of the GPU cluster:
 4. Config **Price By Label** (optional).
     Currently only two keys are supported: `modelName` and `device`
 
-    **modelName**: GPU model, example "Tesla P100-PCIE-16GB" or "Tesla T4".
+    **modelName**: GPU model, example "Tesla P100-PCIE-16GB" or "Tesla T4"(Got it by run `nvidia-smi`).
 
     **device**: GPU manufacturer, example "nvidia" or "ascend".
 
